--- a/app/src/main/res/layout/activity_requirements_page.xml
+++ b/app/src/main/res/layout/activity_requirements_page.xml
@@ -6,6 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RequirementsPage">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/requirements_text" />
 
 </RelativeLayout>
