--- a/app/src/main/res/menu/menu_requirements_page.xml
+++ b/app/src/main/res/menu/menu_requirements_page.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".RequirementsPage">
-    <item android:id="@+id/action_login" android:title="@string/action_login"
+    <item android:id="@+id/action_logout" android:title="@string/action_logout"
         android:orderInCategory="99" app:showAsAction="never" />
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
