Set up a separate activity in which to test and create a refactored version of the requirements page

--- a/app/src/main/res/menu/menu_requirements_page.xml
+++ b/app/src/main/res/menu/menu_requirements_page.xml
@@ -4,6 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".RequirementsPage">
     <item
+        android:id="@+id/action_main"
+        android:orderInCategory="98"
+        android:title="Test Main"
+        app:showAsAction="never"
+        />
+    <item
         android:id="@+id/action_logout"
         android:orderInCategory="99"
         android:title="@string/action_logout"
