--- a/app/src/main/res/layout/fragment_requirements.xml
+++ b/app/src/main/res/layout/fragment_requirements.xml
@@ -1,16 +1,19 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.house_panini.paulm.apo_app.MainActivity$PlaceholderFragment">
+    style="@style/match_parent"
+    tools:context="com.house_panini.paulm.apo_app.MainActivity.RequirementsFragment">
+    <ScrollView style="@style/match_parent">
+        <LinearLayout
+            android:id="@+id/requirements_layout"
+            android:orientation="vertical"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            style="@style/match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
-</RelativeLayout>
+            <!-- Cards to be created dynamically via requirement_card.xml template -->
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
