--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     tools:context="com.house_panini.paulm.apo_app.MainActivity"
     tools:ignore="MergeRootFrame"
-    style="@style/match_parent" />
+    style="@style/match_parent">
+    <fragment
+        android:id="@+id/requirements_fragment"
+        android:name="com.house_panini.paulm.apo_app.RequirementsFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+    />
+</FrameLayout>
