Implemented a crude Navigation Drawer that works

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <!-- Card screen margins, per random intuition (Can be debated) -->
     <dimen name="card_horizontal_margin">3dp</dimen>
     <dimen name="card_vertical_margin">3dp</dimen>
+
+    <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
+         https://developer.android.com/design/patterns/navigation-drawer.html -->
+    <dimen name="navigation_drawer_width">280dp</dimen>
 </resources>
