Updated EventFragment to correctly parse and display event information

--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -56,13 +56,13 @@
                 android:layout_below="@id/event_location"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1 Leadership Event Credit"
-                    android:textSize="@dimen/abc_text_size_medium_material"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp" />
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="1 Leadership Event Credit"-->
+                    <!--android:textSize="@dimen/abc_text_size_medium_material"-->
+                    <!--android:layout_marginTop="15dp"-->
+                    <!--android:layout_marginBottom="15dp" />-->
             </LinearLayout>
             <TextView
                 android:id="@+id/event_description"
